Fix inconsistent spacing around the announcements

--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,6 @@ button {
 
 .announcement-card, .trending-card {
     display: grid;
-    gap: 10px;
     background-color: #fff;
     border-radius: 10px;
 }
